# meam517-rollingrobot

./: A.m  F.m  README.md  all_constraints.m  b.m  control_des.m  dfphalf_dx.m  dynamics_constraint.m  dynamics_constraint_with_derivative.m  dynamics_constraints.m  find_top_trajectory.m  gen_f.m  generate_f.m  getContinuousInputTrajectory.m  getContinuousStateTrajectory.m  getTopDynamics.m  getdHi.m  getdHi_dx.m  getdHi_dx.m~  qdotfunc.m  runsim.m  testsim.m  top_trajgen.m  toy_top_con.m  toy_top_min.m  toy_top_obj.m  trajectory_cost.m  udotfunc.m
snopt7/: .cvsignore  ChangeLog  FAQ.mex  FAQ.snopt  GNUmakefile.in  INSTALL  README  README.AMPL  README.MATLAB  README.WhatsNew  aclocal.m4  confdefs.h  configure  configure.ac  snoptSupport
snopt7/CVS/: Entries  Repository
snopt7/ampl/: README
snopt7/ampl/CVS/: Entries  Repository
snopt7/ampl/examples/: bearing.nl  camshape.nl  catmix.nl  chain.nl  channel.nl  elec.nl  gasoil.nl  glider.nl  marine.nl  methanol.nl  minsurf.nl  pinene.nl  polygon.nl  robot.nl  rocket.nl  steering.nl  torsion.nl
snopt7/ampl/examples/CVS/: Entries  Repository
snopt7/ampl/snopt/: changes  snopt.c  xsum0.out
snopt7/ampl/snopt/CVS/: Entries  Repository
snopt7/ampl/solvers/: fmain.c
snopt7/ampl/solvers/CVS/: Entries  Repository
snopt7/ampl/solvers/nlc/: 00lastchange  index.html
snopt7/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
snopt7/cexamples/: README  Submakefile  csntoya.c  snopt.h  toyfunction.c  toyfunction.h
snopt7/cexamples/CVS/: Entries  Repository
snopt7/cmex/: .cvsignore  ChangeLog  Submakefile  dummy.c  mexUtility.c  mexUtility.h  sncmexlog.c  sncmexlog.f  snopt.h  snoptcmex.c  snoptcmex.h  snoptprint.c  snoptprint.h  snoptprobdef.c  snoptprobdef.h
snopt7/cmex/CVS/: Entries  Repository
snopt7/cmex/matlab/: README  setpath.m
snopt7/cmex/matlab/CVS/: Entries  Repository
snopt7/config/CVS/: Entries  Repository
snopt7/config/m4/: ac_f2c.m4
snopt7/config/m4/CVS/: Entries  Repository
snopt7/conftest.dir/: config.status
snopt7/csrc/: .cvsignore  README.C  Submakefile  dummy.c  np02lib.c  npopt.c  sn02lib.c  sn04wrap.c  sn05wrpa.c  sn05wrpb.c  sn05wrpc.c  sn05wrpn.c  sn10mach.c  sn20amat.c  sn25bfac.c  sn27lu.c  sn30spec.c  sn35mps.c  sn37wrap.c  sn40bfil.c  sn50lp.c  sn55qp.c  sn56qncg.c  sn57qopt.c  sn60srch.c  sn65rmod.c  sn70nobj.c  sn80ncon.c  sn82qn.c  sn83bfgs.c  sn85hess.c  sn87sopt.c  snfilewrapper.c  snopta.c  snoptb.c  snoptc.c  snoptq.c  sq02lib.c  sqopt.c
snopt7/csrc/CVS/: Entries  Repository
snopt7/doc/: elastic.info  format.info
snopt7/doc/CVS/: Entries  Repository
snopt7/examples/: .cvsignore  README  SampleMake  SampleRun  Submakefile  calvara.f  catmixa.f  catmixb.f  catmixc.f  check.log0  check_vg  hs118.f  run  runLP  runLP_vg  run_vg  slmain.f  slmainMPS.f  springa.f  springb.f  springia.f  springib.f  sqmain.f  sqmain2.f  sqmain3.f90  sqmain3Module.f90  sqmainMPS.f  t2bananaa.f  t4mannea.f  t4manneb.f  t4mannec.f  testbedc.f  testbedc.spc  tester.f  tester.spc  testera.f  testera.spc
snopt7/examples/CVS/: Entries  Repository
snopt7/f2c/: Submakefile
snopt7/f2c/CVS/: Entries  Repository
snopt7/f2c/libf2c/: .cvsignore  makefile.mingw32
snopt7/f2c/libf2c/CVS/: Entries  Repository
snopt7/f2c/src/CVS/: Entries  Repository
snopt7/interfaces/: README  Submakefile
snopt7/interfaces/CVS/: Entries  Repository
snopt7/interfaces/cexamples/: hs118.c
snopt7/interfaces/cexamples/CVS/: Entries  Repository
snopt7/interfaces/cppexamples/CVS/: Entries  Repository
snopt7/interfaces/include/CVS/: Entries  (+1 more)
snopt7/matlab/: snsolve.m  toymin.out
snopt7/mex/: Submakefile  snoptmex.F90  sqoptmex.F90
snopt7/mex/CVS/: Entries  Repository
snopt7/snadiopt/: .cvsignore  GNUmakefile  INSTALL  README  Submakefile.in  TODO  configure  configure.in  make_defaults.in
snopt7/snadiopt/CVS/: Entries  Repository
snopt7/snadiopt/common_lib_src/: ad.f  dad.f  mtx.f  sad.f  sn05adwrp.f
snopt7/snadiopt/examples/: .cvsignore  banana.f  banana.spc  banana_main.f  cracking_oil.f  cracking_oil.spc  cracking_oil_main.f  hs47.f  hs47.spc  hs47_main.f  manne.f  manne.spc  manne_main.f  snmain.f  snmain.spc  snmain_main.f  sntoy.f  sntoy.spc  sntoy_main.f  spring.f  spring.spc  spring_main.f  train.f  train.spc  train_main.f
snopt7/snadiopt/lib_src/: daduserfg.f  nlp.f  saduserfg.f
snopt7/snadiopt/perl_src/: .cvsignore  FortranUtils.pm  README
snopt7/snctrl/CVS/: Entries  Repository
snopt7/snctrl/matlab/: Submakefile  runAllExamples.m  setPath.m  sncGet.m  sncGetc.m  sncGeti.m  sncGetr.m  sncInit.m  sncSet.m  sncSeti.m  sncSetr.m  sncSpec.m  snctrlD.m
snopt7/snctrl/mex/: Submakefile  ctmex.F90  ctmexModule.f90
snopt7/src/: .cvsignore  Submakefile  dummy.c  np02lib.f  npopt.f  sn02lib.f  sn04stats.f  sn04wrap.f  sn05wrpa.f  sn05wrpb.f  sn05wrpc.f  sn05wrpch.f  sn05wrpn.f  sn10mach.f  sn12ampl.f  sn17util.f  sn20amat.f  sn25bfac.f  sn27lu.f  sn30spec.f  sn35mps.f  sn37wrap.f  sn40bfil.f  sn50lp.f  sn55qp.f  sn56qncg.f  sn57qopt.f  sn60srch.f  sn65rmod.f  sn70nobj.f  sn80ncon.f  sn82qn.f  sn83bfgs.f  sn85hess.f  sn87sopt.f  snctrl.f  snfilewrapper.f  snopta.f  snoptb.f  snoptc.f  (+7 more)
snopt7/src/CVS/: Entries  Repository
snopt7/utils/: .cvsignore  WriteStats  ftnchek_npmain  ftnchek_sn01main  ftnchek_snmaina  ftnchek_snmainb  ftnchek_snmainc  ftnchek_snmemtesta  ftnchek_snmemtestb  ftnchek_sntoya  ftnchek_sqmain  stats.com  stats.f  writeLP
snopt7/utils/CVS/: Entries  Repository
snopt7/win64/: README  snopt-dll.vfproj  snopt.sln  snopt.vfproj  springa-example.vfproj  sqopt-dll.vfproj  sqopt.vfproj
snopt7/win64/CVS/: Entries  Repository
snopt7/win64/snopt-c-example/: snopt-c-example.vcxproj
snopt7/win64/snopt-f2c/: SNOPTCMEX32.DEF  SNOPTCMEX64.DEF  csntoya.vcxproj  snoptc.sln  snoptc.vcxproj  snoptcmex.vcxproj  vcf2c.lib
snopt7/win64/snopt_c/: snopt_c.vcxproj
snopt7/win64/snopt_cpp/: snopt_cpp.vcxproj
snopt7/win64/snoptmex/: SNOPTMEX32.DEF  SNOPTMEX64.DEF  snoptmex.vfproj
snopt7/win64/sqoptmex/: SQOPTMEX32.DEF  SQOPTMEX64.DEF  sqoptmex.vfproj
(+275 files in other folders)
